--- a/Inicio.html
+++ b/Inicio.html
@@ -561,7 +561,7 @@
                 <h4
                   class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-2"
                 >
-                  Jefe de produccion
+                  Produccion
                 </h4>
                 <p class="u-align-center u-text u-text-3">
                   "Nuestra labor es siempre dar lo mejor"
@@ -608,7 +608,7 @@
                 <h4
                   class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-6"
                 >
-                  Jefe de Calidad
+                  Calidad
                 </h4>
                 <p class="u-align-center u-text u-text-7">
                   "la calidad en cada uno de nuestros procesos"
