--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                 <h4
                   class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-4"
                 >
-                  Jede de mantenimiento
+                  Mantenimiento
                 </h4>
                 <p class="u-align-center u-text u-text-5">
                   Trabajamos con todos los implementos de seguridad para
